<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorYellow"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/nome_" />

        <TextView
            android:id="@+id/tv_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_nome"
            android:text="@string/nome" />

        <TextView
            android:id="@+id/text_cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@id/text_nome"
            android:text="@string/cpf_" />

        <TextView
            android:id="@+id/tv_cpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nome"
            android:layout_toRightOf="@id/text_cpf"
            android:text="@string/cpf" />

        <TextView
            android:id="@+id/text_idade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@id/text_cpf"
            android:text="@string/idade_" />

        <TextView
            android:id="@+id/tv_idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cpf"
            android:layout_toRightOf="@id/text_idade"
            android:text="@string/idade" />

        <TextView
            android:id="@+id/text_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@id/text_idade"
            android:text="@string/telefone_" />

        <TextView
            android:id="@+id/tv_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_idade"
            android:layout_toRightOf="@id/text_telefone"
            android:text="@string/telefone" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_below="@id/text_telefone"
            android:text="@string/email_" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_telefone"
            android:layout_toRightOf="@id/text_email"
            android:text="@string/email" />
    </RelativeLayout>
</android.support.v7.widget.CardView>