<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    android:background="@color/colorLightCoral">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:textColorHint="@color/colorBlack"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:textColorHint="@color/colorBlack"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idade"
                android:textColorHint="@color/colorBlack"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:textColorHint="@color/colorBlack"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="20dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/colorBlack"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_inserir"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/inserir_dados"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"/>

        <Button
            android:id="@+id/bt_listar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/listar"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"/>

        <Button
            android:id="@+id/bt_voltar_main"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/voltar"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"/>
    </LinearLayout>
</ScrollView>